# image_processor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  USAGE.md  pyproject.toml
julia/: README.md  julia.jl  julia_test.jl  quantum_teleportation_experiment.jl
scripts/: test_video_processing.py
src/: dds2png.py  jpg2png.py  julia.jl  koma_separator.py  remove_img.py  rename.py  test.jl  video2koma.py  video_divider.py  webp2png.py
src/image_processor/: __init__.py  types.py
src/image_processor/conversion/: __init__.py
src/image_processor/core/: __init__.py  common.py
src/image_processor/processing/: __init__.py
src/image_processor/utils/: __init__.py  helpers.py  profiling.py
src/image_processor/video/: __init__.py  frame_extractor.py
tests/: conftest.py
tests/integration/: test_workflow.py
tests/property/: test_helpers_property.py
tests/unit/: test_core.py  test_utils.py
tools/: common.py
tools/image_conversion/: dds2png.py  format_converter.py
tools/image_processing/: koma_separator.py  remove_img.py
tools/utilities/: iroiro_script.py  prompts.md  rename.py
tools/video_processing/: video2koma.py  video_divider.py
